--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mongoose": "^5.11.15",
     "mongoose-unique-validator": "^2.0.3",
     "mqtt": "^4.3.7",
+    "msg91-api": "^1.1.0",
     "multer": "^1.4.2",
     "node-image-resizer": "^1.0.0",
     "node-notifier": "^9.0.0",
